fixed bug with background image was not showing after updating the tree with ../

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ html {
 body {
 	transition:none;
 	font-family: 'Quicksand', sans-serif;
-	background-image: url(/images/background/dark/background\ \(3\).jpg);
+	background-image: url(../images/background/dark/background\ \(3\).jpg);
 	background-size: 800px;
 	background-repeat: repeat;
 	color: white;
@@ -519,8 +519,7 @@ hr {
 	}
 	
 	body{
-		/* background-image: radial-gradient(orange 5.66%, #ffffff 94.35%); */
-		background-image: url(/images/background/light/bg2.jpg);
+		background-image: url(../images/background/light/bg2.jpg);
 		background-repeat:repeat;
 		background-size: 900px;
 	}
